# SamsungEXMLParser

./: CMakeLists.txt  README.md  template.exml
.cursor/: tasks.md
include/: exml_parser.h
src/: exml_parser.cpp
tests/: test_main.cpp
